# sandy_isa

./: Cargo.toml  README.md  build.rs  fac.sisa  fib.sisa  notes.txt
src/: assembler.rs  lexer.rs  lib.rs  main.rs  parser.rs  vm.rs
src/parser/: argchecker.rs  grammar.lalrpop  grammar.rs
src/vm/: executor.rs
