[package]
name = "sandy_isa"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.6"

[dependencies]
logos = "0.12.0"
lalrpop-util = "0.19.6"
ariadne = "0.1.3"

[profile.release]
opt-level = 3
lto = true
